// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bottom 1`] = `
<aside
  class="bottom s-Hw7hm9C7K1_q"
>
  <section
    aria-expanded="true"
    aria-label="minimizable"
    class="s-vqhOCvFa7LzI vertical"
    id="minimizable-section-13"
    style="height: 25vw; transition: height var(--short);"
  >
    <menu
      class="bottom s-vqhOCvFa7LzI vertical"
    >
      <ol
        class="s-vqhOCvFa7LzI"
        role="tablist"
        style="--corner1: url(#clip-path-10100); --corner2: url(#clip-path-10110);"
      >
        <li
          class="bg s-vqhOCvFa7LzI"
        />
         
        <li
          class="s-vqhOCvFa7LzI"
        >
          <button
            aria-selected="false"
            class="transparent s-NMyTiX1zi6rz"
            role="tab"
          >
            <div
              class="s-NMyTiX1zi6rz"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                expand_more
              </span>
              
              
            </div>
             
          </button>
          <!--&lt;Button&gt;-->
           
        </li>
      </ol>
       
      <div
        aria-controls="minimizable-section-13"
        class="gutter s-vqhOCvFa7LzI"
        role="scrollbar"
      />
       
      <svg
        class="s-vqhOCvFa7LzI"
        style="width: 0px; height: 0px;"
      >
        <clippath
          class="s-vqhOCvFa7LzI"
          clipPathUnits="objectBoundingBox"
          id="clip-path-10100"
        >
          <path
            class="s-vqhOCvFa7LzI"
            d="M 0 1 C 0.5 1 0.5 0 1 0 V 1 Z"
            transform="rotate(0) scale(1, 1)"
            transform-origin="0.5 0.5"
          />
        </clippath>
        <clippath
          class="s-vqhOCvFa7LzI"
          clipPathUnits="objectBoundingBox"
          id="clip-path-10110"
        >
          <path
            class="s-vqhOCvFa7LzI"
            d="M 0 0 C 0.5 0 0.5 1 1 1 H 0 Z"
            transform="rotate(0) scale(1, 1)"
            transform-origin="0.5 0.5"
          />
        </clippath>
      </svg>
    </menu>
     
    <span
      class="s-vqhOCvFa7LzI"
    >
      <div
        class="discussion s-4DrpFHLJm4IA"
      >
        <div
          class="messages s-4DrpFHLJm4IA"
        >
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Qu'est-ce qui se passe encore ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #ff4500;"
          >
            Maître Follas
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Notre ami va se faire un plaisir de vous l'expliquer.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #239646;"
          >
            Pascal
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Les Volfoni ont organisé à la péniche une petite réunion des cadres, façon meeting, si vous voyez ce que je veux dire.
M'enfin quoi, on parle dans votre dos.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Et tu tiens ça d'où ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #239646;"
          >
            Pascal
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Je ne peux pas le dire, j'ai promis. Ce serait mal.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Alors ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #ff4500;"
          >
            Maître Follas
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Eh bien. Euh. Y'a deux solutions : ou on se dérange, ou on méprise. 
Oui, évidemment, n'importe comment une tournée d'inspection peut jamais nuire, bien sûr.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Bon, on va y aller, hmm ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #239646;"
          >
            Pascal
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Monsieur Fernand, y'a peut-être une place pour moi dans votre auto. Des fois que la réunion devienne houleuse ... J'ai une présence tranquillisante.
          </span>
        </div>
         
        <form
          class="s-4DrpFHLJm4IA"
        >
          <fieldset
            class="s-Fe6WNbR-55zp"
          >
             
            <input
              class="s-Fe6WNbR-55zp"
            />
          </fieldset>
          <!--&lt;Input&gt;-->
           
          <button
            class="s-NMyTiX1zi6rz"
            disabled=""
            title="Envoyer à tous"
            type="submit"
          >
            <div
              class="s-NMyTiX1zi6rz"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                send
              </span>
              
              
            </div>
             
          </button>
          <!--&lt;Button&gt;-->
        </form>
      </div>
      <!--&lt;Discussion&gt;-->
       
      
    </span>
  </section>
  <!--&lt;MinimizableSection&gt;-->
</aside>
`;

exports[`Left 1`] = `
<aside
  class="left s-Hw7hm9C7K1_q"
>
  <section
    aria-expanded="true"
    aria-label="minimizable"
    class="s-vqhOCvFa7LzI"
    id="minimizable-section-10"
    style="width: 25vw; transition: width var(--short);"
  >
    <menu
      class="left s-vqhOCvFa7LzI"
    >
      <ol
        class="s-vqhOCvFa7LzI"
        role="tablist"
        style="--corner1: url(#clip-path-10040); --corner2: url(#clip-path-10050);"
      >
        <li
          class="bg s-vqhOCvFa7LzI"
        />
         
        <li
          class="s-vqhOCvFa7LzI"
        >
          <button
            aria-selected="false"
            class="transparent s-NMyTiX1zi6rz"
            role="tab"
          >
            <div
              class="s-NMyTiX1zi6rz"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                navigate_before
              </span>
              
              
            </div>
             
          </button>
          <!--&lt;Button&gt;-->
           
        </li>
      </ol>
       
      <div
        aria-controls="minimizable-section-10"
        class="gutter s-vqhOCvFa7LzI"
        role="scrollbar"
      />
       
      <svg
        class="s-vqhOCvFa7LzI"
        style="width: 0px; height: 0px;"
      >
        <clippath
          class="s-vqhOCvFa7LzI"
          clipPathUnits="objectBoundingBox"
          id="clip-path-10040"
        >
          <path
            class="s-vqhOCvFa7LzI"
            d="M 0 1 C 0.5 1 0.5 0 1 0 V 1 Z"
            transform="rotate(90) scale(1, 1)"
            transform-origin="0.5 0.5"
          />
        </clippath>
        <clippath
          class="s-vqhOCvFa7LzI"
          clipPathUnits="objectBoundingBox"
          id="clip-path-10050"
        >
          <path
            class="s-vqhOCvFa7LzI"
            d="M 0 0 C 0.5 0 0.5 1 1 1 H 0 Z"
            transform="rotate(90) scale(1, 1)"
            transform-origin="0.5 0.5"
          />
        </clippath>
      </svg>
    </menu>
     
    <span
      class="s-vqhOCvFa7LzI"
    >
      <div
        class="discussion s-4DrpFHLJm4IA"
      >
        <div
          class="messages s-4DrpFHLJm4IA"
        >
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Qu'est-ce qui se passe encore ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #ff4500;"
          >
            Maître Follas
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Notre ami va se faire un plaisir de vous l'expliquer.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #239646;"
          >
            Pascal
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Les Volfoni ont organisé à la péniche une petite réunion des cadres, façon meeting, si vous voyez ce que je veux dire.
M'enfin quoi, on parle dans votre dos.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Et tu tiens ça d'où ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #239646;"
          >
            Pascal
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Je ne peux pas le dire, j'ai promis. Ce serait mal.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Alors ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #ff4500;"
          >
            Maître Follas
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Eh bien. Euh. Y'a deux solutions : ou on se dérange, ou on méprise. 
Oui, évidemment, n'importe comment une tournée d'inspection peut jamais nuire, bien sûr.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Bon, on va y aller, hmm ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #239646;"
          >
            Pascal
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Monsieur Fernand, y'a peut-être une place pour moi dans votre auto. Des fois que la réunion devienne houleuse ... J'ai une présence tranquillisante.
          </span>
        </div>
         
        <form
          class="s-4DrpFHLJm4IA"
        >
          <fieldset
            class="s-Fe6WNbR-55zp"
          >
             
            <input
              class="s-Fe6WNbR-55zp"
            />
          </fieldset>
          <!--&lt;Input&gt;-->
           
          <button
            class="s-NMyTiX1zi6rz"
            disabled=""
            title="Envoyer à tous"
            type="submit"
          >
            <div
              class="s-NMyTiX1zi6rz"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                send
              </span>
              
              
            </div>
             
          </button>
          <!--&lt;Button&gt;-->
        </form>
      </div>
      <!--&lt;Discussion&gt;-->
       
      
    </span>
  </section>
  <!--&lt;MinimizableSection&gt;-->
</aside>
`;

exports[`Multiple horizontal, custom tabs 1`] = `
<aside
  class="bottom s-Hw7hm9C7K1_q"
>
  <section
    aria-expanded="false"
    aria-label="minimizable"
    class="s-vqhOCvFa7LzI minimized vertical"
    id="minimizable-section-8"
    style="height: 25vw; transition: height var(--short);"
  >
    <menu
      class="bottom s-vqhOCvFa7LzI vertical"
    >
      <ol
        class="s-vqhOCvFa7LzI"
        role="tablist"
        style="--corner1: url(#clip-path-10000); --corner2: url(#clip-path-10010);"
      >
        <li
          class="bg s-vqhOCvFa7LzI"
        />
         
        <li
          class="s-vqhOCvFa7LzI"
        >
          <button
            aria-selected="false"
            class="transparent s-NMyTiX1zi6rz"
            role="tab"
          >
            <div
              class="s-NMyTiX1zi6rz"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                question_answer
              </span>
              
              
            </div>
             
          </button>
          <!--&lt;Button&gt;-->
           
        </li>
        <li
          class="s-vqhOCvFa7LzI"
        >
          <button
            aria-selected="false"
            class="transparent s-NMyTiX1zi6rz"
            role="tab"
          >
            <div
              class="s-NMyTiX1zi6rz"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                help
              </span>
              
              
            </div>
             
          </button>
          <!--&lt;Button&gt;-->
           
        </li>
      </ol>
       
      <div
        aria-controls="minimizable-section-8"
        class="gutter s-vqhOCvFa7LzI"
        role="scrollbar"
      />
       
      <svg
        class="s-vqhOCvFa7LzI"
        style="width: 0px; height: 0px;"
      >
        <clippath
          class="s-vqhOCvFa7LzI"
          clipPathUnits="objectBoundingBox"
          id="clip-path-10000"
        >
          <path
            class="s-vqhOCvFa7LzI"
            d="M 0 1 C 0.5 1 0.5 0 1 0 V 1 Z"
            transform="rotate(0) scale(1, 1)"
            transform-origin="0.5 0.5"
          />
        </clippath>
        <clippath
          class="s-vqhOCvFa7LzI"
          clipPathUnits="objectBoundingBox"
          id="clip-path-10010"
        >
          <path
            class="s-vqhOCvFa7LzI"
            d="M 0 0 C 0.5 0 0.5 1 1 1 H 0 Z"
            transform="rotate(0) scale(1, 1)"
            transform-origin="0.5 0.5"
          />
        </clippath>
      </svg>
    </menu>
     
    <span
      class="s-vqhOCvFa7LzI"
    >
      <div
        class="discussion s-4DrpFHLJm4IA"
      >
        <div
          class="messages s-4DrpFHLJm4IA"
        >
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Qu'est-ce qui se passe encore ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #ff4500;"
          >
            Maître Follas
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Notre ami va se faire un plaisir de vous l'expliquer.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #239646;"
          >
            Pascal
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Les Volfoni ont organisé à la péniche une petite réunion des cadres, façon meeting, si vous voyez ce que je veux dire.
M'enfin quoi, on parle dans votre dos.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Et tu tiens ça d'où ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #239646;"
          >
            Pascal
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Je ne peux pas le dire, j'ai promis. Ce serait mal.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Alors ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #ff4500;"
          >
            Maître Follas
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Eh bien. Euh. Y'a deux solutions : ou on se dérange, ou on méprise. 
Oui, évidemment, n'importe comment une tournée d'inspection peut jamais nuire, bien sûr.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Bon, on va y aller, hmm ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #239646;"
          >
            Pascal
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Monsieur Fernand, y'a peut-être une place pour moi dans votre auto. Des fois que la réunion devienne houleuse ... J'ai une présence tranquillisante.
          </span>
        </div>
         
        <form
          class="s-4DrpFHLJm4IA"
        >
          <fieldset
            class="s-Fe6WNbR-55zp"
          >
             
            <input
              class="s-Fe6WNbR-55zp"
            />
          </fieldset>
          <!--&lt;Input&gt;-->
           
          <button
            class="s-NMyTiX1zi6rz"
            disabled=""
            title="Envoyer à tous"
            type="submit"
          >
            <div
              class="s-NMyTiX1zi6rz"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                send
              </span>
              
              
            </div>
             
          </button>
          <!--&lt;Button&gt;-->
        </form>
      </div>
      <!--&lt;Discussion&gt;-->
       
      
    </span>
  </section>
  <!--&lt;MinimizableSection&gt;-->
</aside>
`;

exports[`Multiple vertical, custom tabs 1`] = `
<aside
  class="right s-Hw7hm9C7K1_q"
>
  <section
    aria-expanded="true"
    aria-label="minimizable"
    class="s-vqhOCvFa7LzI"
    id="minimizable-section-9"
    style="width: 25vw; transition: width var(--short);"
  >
    <menu
      class="right s-vqhOCvFa7LzI"
    >
      <ol
        class="s-vqhOCvFa7LzI"
        role="tablist"
        style="--corner1: url(#clip-path-10020); --corner2: url(#clip-path-10030);"
      >
        <li
          class="bg s-vqhOCvFa7LzI"
        />
         
        <li
          class="s-vqhOCvFa7LzI active"
        >
          <button
            aria-selected="true"
            class="transparent s-NMyTiX1zi6rz"
            role="tab"
          >
            <div
              class="s-NMyTiX1zi6rz"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                question_answer
              </span>
              
              
            </div>
             
          </button>
          <!--&lt;Button&gt;-->
           
        </li>
        <li
          class="s-vqhOCvFa7LzI"
        >
          <button
            aria-selected="false"
            class="transparent s-NMyTiX1zi6rz"
            role="tab"
          >
            <div
              class="s-NMyTiX1zi6rz"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                help
              </span>
              
              
            </div>
             
          </button>
          <!--&lt;Button&gt;-->
           
        </li>
      </ol>
       
      <div
        aria-controls="minimizable-section-9"
        class="gutter s-vqhOCvFa7LzI"
        role="scrollbar"
      />
       
      <svg
        class="s-vqhOCvFa7LzI"
        style="width: 0px; height: 0px;"
      >
        <clippath
          class="s-vqhOCvFa7LzI"
          clipPathUnits="objectBoundingBox"
          id="clip-path-10020"
        >
          <path
            class="s-vqhOCvFa7LzI"
            d="M 0 1 C 0.5 1 0.5 0 1 0 V 1 Z"
            transform="rotate(90) scale(1, -1)"
            transform-origin="0.5 0.5"
          />
        </clippath>
        <clippath
          class="s-vqhOCvFa7LzI"
          clipPathUnits="objectBoundingBox"
          id="clip-path-10030"
        >
          <path
            class="s-vqhOCvFa7LzI"
            d="M 0 0 C 0.5 0 0.5 1 1 1 H 0 Z"
            transform="rotate(90) scale(1, -1)"
            transform-origin="0.5 0.5"
          />
        </clippath>
      </svg>
    </menu>
     
    <span
      class="s-vqhOCvFa7LzI"
    >
      <div
        class="discussion s-4DrpFHLJm4IA"
      >
        <div
          class="messages s-4DrpFHLJm4IA"
        >
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Qu'est-ce qui se passe encore ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #ff4500;"
          >
            Maître Follas
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Notre ami va se faire un plaisir de vous l'expliquer.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #239646;"
          >
            Pascal
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Les Volfoni ont organisé à la péniche une petite réunion des cadres, façon meeting, si vous voyez ce que je veux dire.
M'enfin quoi, on parle dans votre dos.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Et tu tiens ça d'où ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #239646;"
          >
            Pascal
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Je ne peux pas le dire, j'ai promis. Ce serait mal.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Alors ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #ff4500;"
          >
            Maître Follas
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Eh bien. Euh. Y'a deux solutions : ou on se dérange, ou on méprise. 
Oui, évidemment, n'importe comment une tournée d'inspection peut jamais nuire, bien sûr.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Bon, on va y aller, hmm ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #239646;"
          >
            Pascal
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Monsieur Fernand, y'a peut-être une place pour moi dans votre auto. Des fois que la réunion devienne houleuse ... J'ai une présence tranquillisante.
          </span>
        </div>
         
        <form
          class="s-4DrpFHLJm4IA"
        >
          <fieldset
            class="s-Fe6WNbR-55zp"
          >
             
            <input
              class="s-Fe6WNbR-55zp"
            />
          </fieldset>
          <!--&lt;Input&gt;-->
           
          <button
            class="s-NMyTiX1zi6rz"
            disabled=""
            title="Envoyer à tous"
            type="submit"
          >
            <div
              class="s-NMyTiX1zi6rz"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                send
              </span>
              
              
            </div>
             
          </button>
          <!--&lt;Button&gt;-->
        </form>
      </div>
      <!--&lt;Discussion&gt;-->
       
      
    </span>
  </section>
  <!--&lt;MinimizableSection&gt;-->
</aside>
`;

exports[`Right 1`] = `
<aside
  class="right s-Hw7hm9C7K1_q"
>
  <section
    aria-expanded="true"
    aria-label="minimizable"
    class="s-vqhOCvFa7LzI"
    id="minimizable-section-11"
    style="width: 25vw; transition: width var(--short);"
  >
    <menu
      class="right s-vqhOCvFa7LzI"
    >
      <ol
        class="s-vqhOCvFa7LzI"
        role="tablist"
        style="--corner1: url(#clip-path-10060); --corner2: url(#clip-path-10070);"
      >
        <li
          class="bg s-vqhOCvFa7LzI"
        />
         
        <li
          class="s-vqhOCvFa7LzI"
        >
          <button
            aria-selected="false"
            class="transparent s-NMyTiX1zi6rz"
            role="tab"
          >
            <div
              class="s-NMyTiX1zi6rz"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                navigate_next
              </span>
              
              
            </div>
             
          </button>
          <!--&lt;Button&gt;-->
           
        </li>
      </ol>
       
      <div
        aria-controls="minimizable-section-11"
        class="gutter s-vqhOCvFa7LzI"
        role="scrollbar"
      />
       
      <svg
        class="s-vqhOCvFa7LzI"
        style="width: 0px; height: 0px;"
      >
        <clippath
          class="s-vqhOCvFa7LzI"
          clipPathUnits="objectBoundingBox"
          id="clip-path-10060"
        >
          <path
            class="s-vqhOCvFa7LzI"
            d="M 0 1 C 0.5 1 0.5 0 1 0 V 1 Z"
            transform="rotate(90) scale(1, -1)"
            transform-origin="0.5 0.5"
          />
        </clippath>
        <clippath
          class="s-vqhOCvFa7LzI"
          clipPathUnits="objectBoundingBox"
          id="clip-path-10070"
        >
          <path
            class="s-vqhOCvFa7LzI"
            d="M 0 0 C 0.5 0 0.5 1 1 1 H 0 Z"
            transform="rotate(90) scale(1, -1)"
            transform-origin="0.5 0.5"
          />
        </clippath>
      </svg>
    </menu>
     
    <span
      class="s-vqhOCvFa7LzI"
    >
      <div
        class="discussion s-4DrpFHLJm4IA"
      >
        <div
          class="messages s-4DrpFHLJm4IA"
        >
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Qu'est-ce qui se passe encore ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #ff4500;"
          >
            Maître Follas
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Notre ami va se faire un plaisir de vous l'expliquer.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #239646;"
          >
            Pascal
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Les Volfoni ont organisé à la péniche une petite réunion des cadres, façon meeting, si vous voyez ce que je veux dire.
M'enfin quoi, on parle dans votre dos.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Et tu tiens ça d'où ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #239646;"
          >
            Pascal
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Je ne peux pas le dire, j'ai promis. Ce serait mal.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Alors ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #ff4500;"
          >
            Maître Follas
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Eh bien. Euh. Y'a deux solutions : ou on se dérange, ou on méprise. 
Oui, évidemment, n'importe comment une tournée d'inspection peut jamais nuire, bien sûr.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Bon, on va y aller, hmm ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #239646;"
          >
            Pascal
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Monsieur Fernand, y'a peut-être une place pour moi dans votre auto. Des fois que la réunion devienne houleuse ... J'ai une présence tranquillisante.
          </span>
        </div>
         
        <form
          class="s-4DrpFHLJm4IA"
        >
          <fieldset
            class="s-Fe6WNbR-55zp"
          >
             
            <input
              class="s-Fe6WNbR-55zp"
            />
          </fieldset>
          <!--&lt;Input&gt;-->
           
          <button
            class="s-NMyTiX1zi6rz"
            disabled=""
            title="Envoyer à tous"
            type="submit"
          >
            <div
              class="s-NMyTiX1zi6rz"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                send
              </span>
              
              
            </div>
             
          </button>
          <!--&lt;Button&gt;-->
        </form>
      </div>
      <!--&lt;Discussion&gt;-->
       
      
    </span>
  </section>
  <!--&lt;MinimizableSection&gt;-->
</aside>
`;

exports[`Top 1`] = `
<aside
  class="top s-Hw7hm9C7K1_q"
>
  <section
    aria-expanded="true"
    aria-label="minimizable"
    class="s-vqhOCvFa7LzI vertical"
    id="minimizable-section-12"
    style="height: 25vw; transition: height var(--short);"
  >
    <menu
      class="top s-vqhOCvFa7LzI vertical"
    >
      <ol
        class="s-vqhOCvFa7LzI"
        role="tablist"
        style="--corner1: url(#clip-path-10080); --corner2: url(#clip-path-10090);"
      >
        <li
          class="bg s-vqhOCvFa7LzI"
        />
         
        <li
          class="s-vqhOCvFa7LzI"
        >
          <button
            aria-selected="false"
            class="transparent s-NMyTiX1zi6rz"
            role="tab"
          >
            <div
              class="s-NMyTiX1zi6rz"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                expand_less
              </span>
              
              
            </div>
             
          </button>
          <!--&lt;Button&gt;-->
           
        </li>
      </ol>
       
      <div
        aria-controls="minimizable-section-12"
        class="gutter s-vqhOCvFa7LzI"
        role="scrollbar"
      />
       
      <svg
        class="s-vqhOCvFa7LzI"
        style="width: 0px; height: 0px;"
      >
        <clippath
          class="s-vqhOCvFa7LzI"
          clipPathUnits="objectBoundingBox"
          id="clip-path-10080"
        >
          <path
            class="s-vqhOCvFa7LzI"
            d="M 0 1 C 0.5 1 0.5 0 1 0 V 1 Z"
            transform="rotate(0) scale(1, -1)"
            transform-origin="0.5 0.5"
          />
        </clippath>
        <clippath
          class="s-vqhOCvFa7LzI"
          clipPathUnits="objectBoundingBox"
          id="clip-path-10090"
        >
          <path
            class="s-vqhOCvFa7LzI"
            d="M 0 0 C 0.5 0 0.5 1 1 1 H 0 Z"
            transform="rotate(0) scale(1, -1)"
            transform-origin="0.5 0.5"
          />
        </clippath>
      </svg>
    </menu>
     
    <span
      class="s-vqhOCvFa7LzI"
    >
      <div
        class="discussion s-4DrpFHLJm4IA"
      >
        <div
          class="messages s-4DrpFHLJm4IA"
        >
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Qu'est-ce qui se passe encore ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #ff4500;"
          >
            Maître Follas
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Notre ami va se faire un plaisir de vous l'expliquer.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #239646;"
          >
            Pascal
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Les Volfoni ont organisé à la péniche une petite réunion des cadres, façon meeting, si vous voyez ce que je veux dire.
M'enfin quoi, on parle dans votre dos.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Et tu tiens ça d'où ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #239646;"
          >
            Pascal
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Je ne peux pas le dire, j'ai promis. Ce serait mal.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Alors ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #ff4500;"
          >
            Maître Follas
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Eh bien. Euh. Y'a deux solutions : ou on se dérange, ou on méprise. 
Oui, évidemment, n'importe comment une tournée d'inspection peut jamais nuire, bien sûr.
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #9c3096;"
          >
            Fernand Naudin
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Bon, on va y aller, hmm ?
          </span>
          <span
            class="from s-4DrpFHLJm4IA"
            style="--player-color: #239646;"
          >
            Pascal
          </span>
          <span
            class="message s-4DrpFHLJm4IA"
          >
            Monsieur Fernand, y'a peut-être une place pour moi dans votre auto. Des fois que la réunion devienne houleuse ... J'ai une présence tranquillisante.
          </span>
        </div>
         
        <form
          class="s-4DrpFHLJm4IA"
        >
          <fieldset
            class="s-Fe6WNbR-55zp"
          >
             
            <input
              class="s-Fe6WNbR-55zp"
            />
          </fieldset>
          <!--&lt;Input&gt;-->
           
          <button
            class="s-NMyTiX1zi6rz"
            disabled=""
            title="Envoyer à tous"
            type="submit"
          >
            <div
              class="s-NMyTiX1zi6rz"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                send
              </span>
              
              
            </div>
             
          </button>
          <!--&lt;Button&gt;-->
        </form>
      </div>
      <!--&lt;Discussion&gt;-->
       
      
    </span>
  </section>
  <!--&lt;MinimizableSection&gt;-->
</aside>
`;
